# AppSecWatch

./: .dockerignore  .gitignore  AGENTS.md  API.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  DOCS.md  Dockerfile  README.md  SUGGESTIONS.md  UI-SPEC.md  WEB_API_PLAN.md  dns.csv  docker-compose.yml  efilli.yaml  example.config.yaml  example.server.yaml  gentle.yaml  pyproject.toml
appsecwatch/: __main__.py  cli.py  config.py  example_config.py  logging.py  models.py  preflight.py  progress.py  runner.py
appsecwatch/ai/: analyzer.py  client.py  policy.py  prompts.py  schemas.py
appsecwatch/api/: __init__.py  assets.py  auth.py  backfill.py  config.py  db.py  finding_state.py  history.py  jobs.py  models.py  notify.py  nuclei_catalog.py  nuclei_custom.py  result.py  scan_templates.py  scheduler.py  search.py  security.py  server.py  suppressions.py
appsecwatch/audit/: cookies.py  crawler.py  header_checks.py  js_libs.py  lifecycle.py  liveness.py  nuclei_parse.py  nuclei_runner.py  secrets.py  signatures.py  sslscan_runner.py  (+7 more)
scripts/: backup.sh  deploy.sh  provision.sh
tests/: conftest.py  test_ai_policy.py  test_ai_prompts.py  test_analyzer.py  test_api.py  test_app_profile.py  test_assets.py  test_backfill.py  test_basic_auth.py  test_build_pipeline.py  test_capabilities.py  test_cookies.py  test_crawler.py  test_domains.py  test_error_consolidation.py  test_exec_pdf.py  test_executive.py  test_finding_state.py  test_header_checks.py  test_identity.py  test_js_libs.py  test_lifecycle.py  test_liveness.py  test_llm_client.py  test_logging_render.py  test_nuclei.py  test_nuclei_parse.py  test_page_signals.py  test_probe_streaming.py  test_report_render.py  test_scheduler.py  test_search.py  test_secrets.py  test_signatures.py  test_sslscan.py  test_subproc_logging.py  test_suppress.py  test_surface.py  test_takeovers.py  test_taxonomy.py  (+5 more)
watchtower/: __main__.py  cli.py  config.py  example_config.py  logging.py  models.py  preflight.py  progress.py  runner.py
web/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
(+169 files in other folders)
