[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appsecwatch"
version = "0.1.0"
description = "Point-in-time external AppSec audit orchestrator"
requires-python = ">=3.11"
authors = [{name = "AppSecWatch"}]
license = {text = "Proprietary"}
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "tldextract>=5.1",
    "maxminddb>=2.5",
    "httpx>=0.27",
    "playwright>=1.42",
    "rich>=13.7",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
appsecwatch = "appsecwatch.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["appsecwatch*"]

[tool.setuptools.package-data]
appsecwatch = ["report/templates/*.j2", "audit/data/*.json"]
